# pgr1

./: CMakeLists.txt  DrawingRectangle.cpp  DrawingRectangle.h  IloczynSkalarny.cpp  IloczynSkalarny.h  MinArrayElement.h  Objetosc.cpp  Objetosc.h  Palidrome.h  PalidromeNumber.cpp  PalidromeNumber.h  PalidromeVersionTwo.h  SumAndNumberOfOddNumbers.cpp  SumAndNumberOfOddNumbers.h  main.cpp
BoszkaAplikacja/: BoszkaAplikacja.dev  boszka.cpp
zjazd3/: BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  FillTable.cpp  FillTable.h  MinArrayElement.cpp  Palidrome.cpp  PalidromeVersionTwo.cpp  SumAndNumberOfOddNumbers.h  Zad26.cpp  Zad26.h  main.cpp
zjazd4/: ArrayToFunction.cpp  ArrayToFunction.h  CMakeLists.txt  Calculator.cpp  Calculator.h  FunckjaWartosc.cpp  FunckjaWartosc.h  Funkcje.cpp  Funkcje.h  Multiplication.cpp  Multiplication.h  Potęga.cpp  Potęga.h  Silnia.cpp  Silnia.h  Swapping.cpp  Swapping.h  choinka.cpp  choinka.h  main.cpp  tab5x5.cpp  tab5x5.h
zjazd5/: CMakeLists.txt  EnumDni.cpp  EnumDni.h  Objetosc.cpp  Objetosc.h  Skalarny.cpp  Skalarny.h  TablicaDynamiczna.cpp  TablicaDynamiczna.h  Wskazniki.cpp  Wskazniki.h  WskaznikiNaZmienne.cpp  WskaznikiNaZmienne.h  Zadanie29.cpp  Zadanie29.h  Zadanie30.cpp  Zadanie30.h  Zadanie32.cpp  Zadanie32.h  Zadanie33.cpp  Zadanie33.h  Zadanie44.cpp  Zadanie44.h  main.cpp
zjazd_1_2/gra/: gra.cbp  main.cpp
zjazd_1_2/losowanie/: losowanie.cbp  losowanie.depend  main.cpp
zjazd_1_2/petla1/: main.cpp  petla1.cbp  petla1.depend  petla1.layout
zjazd_1_2/powtorzenie2/: main.cpp  powtorzenie2.cbp
zjazd_1_2/pseudo/: main.cpp  (+2 more)
(+18 files in other folders)
