cmake_minimum_required(VERSION 3.15)
project(zjazd3)

set(CMAKE_CXX_STANDARD 14)

add_executable(zjazd3 main.cpp cmake-build-debug/Zad26.cpp cmake-build-debug/Zad26.h cmake-build-debug/BubbleSort.cpp cmake-build-debug/BubbleSort.h zjazd3/BubbleSort.cpp zjazd3/BubbleSort.h zjazd3/Zad26.cpp zjazd3/Zad26.h)