cmake_minimum_required(VERSION 3.15)
project(zjazd3)

set(CMAKE_CXX_STANDARD 14)

add_executable(zjazd3 main.cpp zjazd3/BubbleSort.cpp zjazd3/BubbleSort.h zjazd3/Zad26.cpp zjazd3/Zad26.h zjazd5/WskaznikiNaZmienne.cpp zjazd5/WskaznikiNaZmienne.h zjazd5/EnumDni.cpp zjazd5/EnumDni.h zjazd5/TablicaDynamiczna.cpp zjazd5/TablicaDynamiczna.h zjazd5/Objetosc.cpp zjazd5/Objetosc.h zjazd5/Skalarny.cpp zjazd5/Skalarny.h zjazd5/Zadanie29.cpp zjazd5/Zadanie29.h zjazd5/Zadanie30.cpp zjazd5/Zadanie30.h zjazd5/Zadanie32.cpp zjazd5/Zadanie32.h zjazd5/Zadanie33.cpp zjazd5/Zadanie33.h zjazd5/Zadanie44.cpp zjazd5/Zadanie44.h)